2007-11-20  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c:
	(folder_changed): update the total count as well as the unread
	count when there is a change in the folder

2007-11-20  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix makes ENABLE not happen if login failed
	* Completed the implementation of TnyMergeFolder, shortened its locks
	and made it possible to provide a ui-locker. Also, locking the ui
	context at the right times.

2007-11-20  Steve Kowalik  <stevenk@ubuntu.com>

	* Bugfix for Ubuntu packages

2007-11-19  Philip Van Hoof  <pvanhoof@gnome.org>

	* IMAP protocol bugfix during Lemonade interop, bug found while
	testing with Arnt's IMAP server
	* Implemented a image/* viewer

2007-11-16  Matthew Barnes  <mbarnes@redhat.com>

	* Merge from upstream to camel-lite (upstream revision 8219)
	* Merged by Philip Van Hoof, bug found by Milan Crha

	* camel-spool-store.c (free_folder_info):
	Missed that CamelSpoolStore has its own free_folder_info()
	implementation (why?).  Change it to use g_slice_free().

2007-11-16  Philip Van Hoof  <pvanhoof@gnome.org>

	* The cache deleter. A little bit of rework
	* Hardening Tinymail a little bit

2007-11-16  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/local/camel-maildir-folder.c:
	Now rewrite folder gets the filename of the messages to rewrite from the
	message info instead of using simply the message uid.

2007-11-16  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix in TnyGtkFolderStoreTreeModel: the signals where not being
	disconnected when the instance finalised.
	* Disconnecting signals
	* Cache deleter must also unreference the service instance
	* Cache deleter must make sure that summary of folder instances is
	not written anymore

2007-11-15  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_connect):