@@ -1,3 +1,10 @@
+2007-11-21  Sergio Villar Senin  <svillar@igalia.com>
+
+	* libtinymail-camel/tny-camel-account.c:
+	(on_set_online_done): do not execute the user callback in an idle
+	if the connection was cancelled in order to prevent a hang of the
+	main loop
+
 2007-11-20  Sergio Villar Senin  <svillar@igalia.com>
 
 	* libtinymail-camel/tny-camel-folder.c:
